Terminal Saved Output Task 1
Last login: Tue Sep 29 11:59:37 on console
Welcome home, Dennis!

The default interactive shell is now zsh.
To update your account to use zsh, please run `chsh -s /bin/zsh`.
For more details, please visit https://support.apple.com/kb/HT208050.
Denniss-Air:~ klimenkoff9$ cd Desktop/Lab\ 6\ CISC\ 3140/
Denniss-Air:Lab 6 CISC 3140 klimenkoff9$ mkdir Lab6
Denniss-Air:Lab 6 CISC 3140 klimenkoff9$ ls
Lab6
Denniss-Air:Lab 6 CISC 3140 klimenkoff9$ mkdir Repo1
Denniss-Air:Lab 6 CISC 3140 klimenkoff9$ cd Repo1/
Denniss-Air:Repo1 klimenkoff9$ touch helloworld.java
Denniss-Air:Repo1 klimenkoff9$ sudo gedit helloworld.java
Password:
sudo: gedit: command not found
Denniss-Air:Repo1 klimenkoff9$ sudo nano helloworld.java
Denniss-Air:Repo1 klimenkoff9$ javac helloworld.java
java helloworld.java:1: error: class HelloWorld is public, should be declared in a file named HelloWorld.java
public class HelloWorld {
       ^
1 error
Denniss-Air:Repo1 klimenkoff9$ sudo nano helloworld.java
Denniss-Air:Repo1 klimenkoff9$ javac helloworld.java
Denniss-Air:Repo1 klimenkoff9$ java helloworld.java
Hello World
Denniss-Air:Repo1 klimenkoff9$ cd ..
Denniss-Air:Lab 6 CISC 3140 klimenkoff9$ mkdir RepoMeta
Denniss-Air:Lab 6 CISC 3140 klimenkoff9$ touch log.txt
Denniss-Air:Lab 6 CISC 3140 klimenkoff9$ 
